--- a/src/NHibernate.AutoMigration/packages.config
+++ b/src/NHibernate.AutoMigration/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
+  <package id="DotLiquid" version="1.8.0" targetFramework="net45" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
-  <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
+  <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
+  <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net45" developmentDependency="true" />
 </packages>
